--- a/sass/_custom-libs-override.scss
+++ b/sass/_custom-libs-override.scss
@@ -1752,10 +1752,6 @@ a.fc-event{
   content:"\E111";
 }
 
-.fa {
-  vertical-align: middle;
-}
-
 .fa-lg {
   vertical-align: -15%;
 }
